css/style.css
html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Tahoma', monospace;
    font-size: 16px;
    line-height: 1.6rem;
    font-weight: 400;
    margin: 0;
}

section {
    padding:2% 0%;
}

i {
    font-size: 150% !important;
}

a {
    display: inline-block;
    margin-right:10px;
    cursor: pointer;
}
strong {
    color: rgba(250, 66, 81, 1);
}

.section-title {
    font-size:100% !important;
    border-bottom:2px solid rgba(250, 66, 81, 1);
    display: inline-block;
    margin-bottom: 5%;
    text-transform: uppercase;
    font-weight:700;
}

.portfolio-section {
    padding:12% 0%;
    
}

/* NAVBAR */
.bg-light {
    padding: 2% 2% !important;
    position: absolute;
    top: 0;
    width: 100%;
    background-color:white!important;
    border:1px solid #f4f4f4;
}

.navbar-expand-lg .navbar-nav .nav-link {
    text-transform:uppercase;
}
.nav-link {
    padding:5px 20px!important;
    margin:0px 10px;
}
#nav-body {
    height: 100vh;
    width: 100%;
    position:fixed;
    border:30px solid rgba(250, 66, 81, 1);
    z-index:100;
}

#contact {
    border:1px solid #f4f4f4;
}
#nav-body footer {
    position:absolute;
    bottom: 0;
    color:black;
    width:100%;
    padding: 1% 0%;
    background-color: white;
    border-top:1px solid #f4f4f4;
}
footer .socials {
    font-size:200% !important;
    margin:10px 5px;
    cursor: pointer;
}
footer p {
    font-size:80% !important;
    
}
/* END NAVBAR */

/* HEADER */
header {
    padding:2%;
    height:100vh !important;
    margin:auto;
    text-align: center;
}
#home-intro {
    margin: auto;
    text-align: center;
    position: relative;
    top: 40vh;
}
#home-intro h1{
    font-size:500%;
}

#home-intro p{
    font-size:120%;
}
#down-scroll  {
    font-size:200%;
    margin-top:5%;
    cursor: pointer;
    color: rgba(250, 66, 81, 1);
}
/* END HOME */
/* CONTACT */
#Contact {
    min-height:80vh;
}
.contact-box {
    padding:3%;
    text-align: left;
    font-size:1
}
.contact-box h3{
    font-size: 100%;
}
.contact-box p{
    font-size: 80%;
}
/* END CONTACT */

/* PATH */
.exp-edu {
    padding:7% 6%;
    border-left:1px solid rgba(250, 66, 81, 1);
    text-align: justify;
}
.exp {
    padding:4%;
}
.date {
    display: inline-block;
    font-size:90%;
    
    font-weight:700;
    
}
.exp-title {
    
    font-size:120%;
    color: #333;
    font-weight:700;
    border:2px 
}
.exp-edu p {
    font-size:90%;
    line-height:1.4rem;
}
/* END PATH */


.work {
    padding: 3%;
}


.wrapper {
    width:55%;
    margin: auto;
    text-align: left;
}

hr {
    margin-top: 1rem;
    margin-bottom: 1rem;
    border: 0;
    border-top: 1px solid rgba(0,0,0,.1);
}

#resume-button {
    background-color: rgba(250, 66, 81, 1);
    color:white;
    
}

#resume-button:hover {
    cursor: pointer;
}



/* SERVICES */
.service {
    padding: 4%;
    text-align: justify;
}
.service i {
    color: rgba(250, 66, 81, 1);
    font-size:60%;
    display: inline-block;
}
.service h2 {
    color: rgba(250, 66, 81, 1);
    font-size:120%;
}
.service p {
    font-size: 80%;
    line-height:1.4rem;
}
/*END SERVICES */

/* PROJECTS */
.project {
    padding:2%;
    position: relative;
}
.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: .5s ease;
    background-color: rgba(0,123,255 , 1);
    display:none;
}
.project-content {
    padding: 10px;
    color: white;
    font-size:120%;
    padding:4%;
    position: relative;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: left;
}
.infos {
    display: inline;
    font-size:120%;
    padding:1%;
}
.project-title {
    font-size:200%;
}
.project-desc {
    font-size:90%;
}

.project:hover .overlay {
    opacity:1;
}
.project-link {
    font-size:160%;
    color: white;
}
.project-image {
    display: block;
    width: 100%;
    height:250px;
}
/*END PROJECTS*/


@media(max-width:767px){
    body {
        font-size: 80%;
        line-height: 1.2rem;
    }
    section {
        padding:5% 0%;
    }
    .wrapper {
        width:80%;
        margin: auto;
        text-align: left;
    }
    #nav-body {
        border:20px solid rgba(250, 66, 81, 1);
       
    }
    /* HEADER */
    #home-intro {
       top: 25vh;
    }
    #home-intro h1{
        font-size:200%;
    }

    #home-intro p{
        font-size:80%;
    }
    #down-scroll  {
        font-size:200%;
        margin-top:5%;
        cursor: pointer;
        color: rgba(250, 66, 81, 1);
    }
    /* END HOME */
    /* RESUME */
    #resume {
        text-align: justify center;
        
    }
    #resume p {
        font-size:80%;
        
    }
    /* PATH */
    .exp-edu {
        padding:3% 1%;
        margin:6% 0%;
    }
    .exp {
        padding:6%;
    }
    .date {
        font-size:70%;
    }
    
    .exp-edu p {
        line-height:1.2rem;
    }
    /* END PATH */
    /* SERVICES */
    .service {
        padding: 7%;
        text-align: left;
    }
    .service i {
        font-size:40%;
    }
    .service h2 {
        font-size:100%;
        display: inline-block;
    }
    
    /*END SERVICES */
    /* PROJECTS */
    .project {
        padding:10%;
        position: relative;
    }
    .overlay {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        height: 100%;
        width: 100%;
        opacity: 0;
        transition: .5s ease;
        background-color: rgba(0,123,255 , 1);
        display:none;
    }
    .project-content {
        padding: 10px;
        color: white;
        font-size:120%;
        padding:4%;
        position: relative;
        top: 50%;
        left: 50%;
        -webkit-transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
        transform: translate(-50%, -50%);
        text-align: left;
    }
    .infos {
        display: inline;
        font-size:120%;
        padding:1%;
    }
    .project-title {
        font-size:200%;
    }
    .project-desc {
        font-size:90%;
    }

    .project:hover .overlay {
        opacity:1;
    }
    .project-link {
        font-size:160%;
        color: white;
    }
    .project-image {
        display: block;
        width: 100%;
        height: auto;
    }
    /*END PROJECTS*/
    /* CONTACT */
    #Contact {
        min-height:80vh;
    }
    .contact-box {
        padding:5% 8%;
        font-size:120%;
    }
    .contact-box h3{
        font-size: 100%;
        color: rgba(250, 66, 81, 1)
    }
    /* END CONTACT */    
}
@media(min-width:768px){
   
    
}
@media(min-width:992px){
   

}
@media(min-width:1200px){
   
}

